Test/metatests/RefreshResolverFails.dfy.refresh.expect
RefreshResolverFails.dfy(8,15): Error: PRE-TYPE: RHS (of type Trait?) not assignable to LHS (of type Class?)
1 resolution/type errors detected in RefreshResolverFails.dfy
